# leetcode_new

./: CMakeLists.txt  README.md
BackTrack/: CMakeLists.txt  func_2d_objs.cpp  func_2d_objs.h
BackTrack/Interview0804/: CMakeLists.txt  subsets.cpp  subsets.h  test_subsets.cpp
BackTrack/Interview0808/: CMakeLists.txt  permutation.cpp  permutation.h  test_permutation.cpp
BackTrack/Interview0812/: CMakeLists.txt  solveNQueens.cpp  solveNQueens.h  test_solveNQueens.cpp
BackTrack/leetcode1219/: CMakeLists.txt  getMaximumGold.cpp  getMaximumGold.h  test_getMaximumGold.cpp
BackTrack/leetcode140/: CMakeLists.txt  test_wordBreak.cpp  wordBreak.cpp  wordBreak.h
BackTrack/leetcode216/: CMakeLists.txt  combinationSum3.cpp  combinationSum3.h  test_combinationSum3.cpp
BackTrack/leetcode39/: CMakeLists.txt  combinationSum.cpp  combinationSum.h  test_combinationSum.cpp
BackTrack/leetcode40/: CMakeLists.txt  combinationSum2.cpp  combinationSum2.h  test_combinationSum2.cpp
BackTrack/leetcode47/: CMakeLists.txt  permuteUnique.cpp  permuteUnique.h  test_permuteUnique.cpp
BackTrack/leetcode691/: CMakeLists.txt  minStickers.cpp  minStickers.h  minStickers_dfsNew.h  test_minStickers.cpp  test_minStickers_dfsNew.cpp
BackTrack/leetcode89/: CMakeLists.txt  grayCode.cpp  grayCode.h  test_grayCode.cpp
BackTrack/leetcode93/: CMakeLists.txt  restoreIpAddresses.cpp  restoreIpAddresses.h  test_restoreIpAddresses.cpp
DynamicProgramming/: CMakeLists.txt
DynamicProgramming/Interview1724/: CMakeLists.txt  getMaxMatrix.cpp  getMaxMatrix.h  test_getMaxMatrix.cpp
DynamicProgramming/SwordOffer14_II/: CMakeLists.txt  cuttingRope.cpp  cuttingRope.h  test_cuttingRope.cpp
DynamicProgramming/leetcode10/: CMakeLists.txt  isMatch.cpp  isMatch.h  test_isMatch.cpp
DynamicProgramming/leetcode1049/: CMakeLists.txt  lastStoneWeightII.cpp  lastStoneWeightII.h  test_lastStoneWeightII.cpp
DynamicProgramming/leetcode1109/: CMakeLists.txt  corpFlightBookings.cpp  corpFlightBookings.h  test_corpFlightBookings.cpp
DynamicProgramming/leetcode1186/: CMakeLists.txt  maximumSum.cpp  maximumSum.h  test_maximumSum.cpp
DynamicProgramming/leetcode1191/: CMakeLists.txt  kConcatenationMaxSum.cpp  kConcatenationMaxSum.h  test_kConcatenationMaxSum.cpp
DynamicProgramming/leetcode1230/: CMakeLists.txt  probabilityOfHeads.cpp  probabilityOfHeads.h  test_probablityOfHeads.cpp
DynamicProgramming/leetcode1240/: CMakeLists.txt  test_tilingRectangle.cpp  tilingRectangle.cpp  tilingRectangle.h
DynamicProgramming/leetcode1262/: CMakeLists.txt  maxSumDivThree.cpp  maxSumDivThree.h  test_maxSumDivThree.cpp
DynamicProgramming/leetcode1310/: CMakeLists.txt  test_xorQueries.cpp  xorQueries.cpp  xorQueries.h
DynamicProgramming/leetcode1314/: CMakeLists.txt  matrixBlockSum.cpp  matrixBlockSum.h  test_matrixBlockSum.cpp
DynamicProgramming/leetcode132/: CMakeLists.txt  minCut.cpp  minCut.h  test_minCut.cpp
DynamicProgramming/leetcode1371/: CMakeLists.txt  findTheLongestSubstring.cpp  findTheLongestSubstring.h  test_findTheLongestSubstring.cpp
DynamicProgramming/leetcode1388/: CMakeLists.txt  maxSizeSlices.cpp  maxSizeSlices.h  test_maxSizeSlices.cpp
DynamicProgramming/leetcode1444/: CMakeLists.txt  test_ways.cpp  ways.cpp  ways.h
DynamicProgramming/leetcode1458/: CMakeLists.txt  maxDotProduct.cpp  maxDotProduct.h  test_maxDotProduct.cpp
DynamicProgramming/leetcode1477/: CMakeLists.txt  minSumOfLengths.cpp  minSumOfLengths.h  test_minSumOfLengths.cpp
DynamicProgramming/leetcode1478/: CMakeLists.txt  minDistance.cpp  minDistance.h  test_minDistance.cpp
DynamicProgramming/leetcode1531/: CMakeLists.txt  getLengthOfOptimalCompression.cpp  getLengthOfOptimalCompression.h  test_getLengthOfOptimalCompression.cpp
DynamicProgramming/leetcode1547/: CMakeLists.txt  minCost.cpp  minCost.h  test_minCost.cpp
DynamicProgramming/leetcode1569/: CMakeLists.txt  numOfWays.cpp  (+2 more)
(+285 files in other folders)
